--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
     "firebase": "^7.24.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
